--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="top-bar">
+    <div id="user-info">
+        <div id="g_id_signin"></div>
+        <span id="user-name"></span>
+    </div>
+</div>
+
 <div class="container">
     <input type="text" id="searchInput" placeholder="Search articles..." />
     <div id="searchResults" class="search-results"></div>
     <div id="content" class="grid"></div>
 </div>
+
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="script.js"></script>
 </body>
+
 </html>
+
