Добавлен почтовый сервис, добавлено получение сообщений от пользователей с почты и чата.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <div id="g_id_signin"></div>
         <span id="user-name"></span>
     </div>
+    <button id="create-ticket-btn">Создать тикет</button>
 </div>
 
 <div class="container">
