--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
         <div id="g_id_signin"></div>
         <span id="user-name"></span>
     </div>
-    <button id="create-ticket-btn">Создать тикет</button>
+    <div class="button-group">
+        <button id="create-ticket-btn">Создать тикет</button>
+        <a id="support-panel-btn" href="support-panel.html" class="hidden">Support Panel</a>
+    </div>
 </div>
 
 <div class="container">
@@ -23,6 +26,4 @@
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="script.js"></script>
 </body>
-
 </html>
-
