--- a/public/support-chat.html
+++ b/public/support-chat.html
@@ -35,6 +35,9 @@
             height: 80px;
             resize: vertical;
         }
+        input[type="file"] {
+            margin-top: 10px;
+        }
         .hidden {
             display: none;
         }
@@ -74,6 +77,7 @@
 
 <div id="reply-section" class="reply-form hidden">
     <textarea id="reply-text" placeholder="Enter your message..."></textarea><br>
+    <input type="file" id="message-file"><br>
     <button id="send-reply">Send</button>
 </div>
 
