--- a/public/ticket.html
+++ b/public/ticket.html
@@ -18,100 +18,16 @@
     <div id="messages" class="messages-box"></div>
 
     <h3>Написать сообщение</h3>
-    <form id="message-form">
-        <textarea id="message-text" required placeholder="Введите сообщение..." rows="5" style="width: 100%"></textarea>
+    <form id="message-form" enctype="multipart/form-data">
+        <textarea id="message-text" placeholder="Введите сообщение..." rows="5" style="width: 100%"></textarea>
+        <br>
+        <input type="file" id="message-file" accept="image/*">
+        <br>
         <button type="submit">Отправить</button>
     </form>
 
-    <button id="close-ticket-btn" style="margin-top: 20px; background-color: #900; color: #fff;">Закрыть тикет</button>
 </div>
 
-<script>
-    const params = new URLSearchParams(window.location.search);
-    const ticketId = params.get('id');
-    const userEmail = getCookie('user_email');
-
-    if (!ticketId || !userEmail) {
-        alert("Ошибка: недостаточно данных.");
-        window.location.href = "/";
-    }
-
-    async function loadTicket() {
-        const res = await fetch(`/api/tickets/${ticketId}?email=${encodeURIComponent(userEmail)}`);
-        const data = await res.json();
-
-        if (!data || !data.ticket) {
-            alert('Тикет не найден или доступ запрещён');
-            window.location.href = "/";
-            return;
-        }
-
-        document.getElementById('ticket-title').textContent = data.ticket.title;
-        document.getElementById('ticket-status').textContent = data.ticket.status;
-        document.getElementById('ticket-description').textContent = data.ticket.description;
-
-        // Отобразить поля тикета
-        const fieldBox = document.getElementById('ticket-fields-container');
-        fieldBox.innerHTML = '';
-        if (data.fields && data.fields.length) {
-            fieldBox.innerHTML = '<h3>Данные тикета</h3>';
-            data.fields.forEach(field => {
-                const p = document.createElement('p');
-                p.innerHTML = `<strong>${field.field_label}:</strong> ${field.field_value}`;
-                fieldBox.appendChild(p);
-            });
-        }
-
-        // Сообщения
-        const msgBox = document.getElementById('messages');
-        msgBox.innerHTML = '';
-        data.messages.forEach(msg => {
-            const div = document.createElement('div');
-            div.className = msg.sender_role === 'support' ? 'msg support' : 'msg customer';
-            div.innerHTML = `<strong>${msg.sender_role === 'support' ? 'Техподдержка' : 'Вы'}:</strong><br>${msg.message}<br><small>${new Date(msg.created_date).toLocaleString()}</small>`;
-            msgBox.appendChild(div);
-        });
-
-        // Скрыть форму и кнопку закрытия если тикет закрыт
-        const isClosed = data.ticket.status === 'closed';
-        document.getElementById('message-form').style.display = isClosed ? 'none' : 'block';
-        document.getElementById('close-ticket-btn').style.display = isClosed ? 'none' : 'inline-block';
-    }
-
-    document.getElementById('message-form').addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const text = document.getElementById('message-text').value.trim();
-        if (!text) return;
-
-        await fetch(`/api/tickets/${ticketId}/reply`, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ email: userEmail, message: text })
-        });
-
-        document.getElementById('message-text').value = '';
-        await loadTicket();
-    });
-
-    document.getElementById('close-ticket-btn').addEventListener('click', async () => {
-        if (!confirm('Вы уверены, что хотите закрыть тикет?')) return;
-
-        await fetch(`/api/tickets/${ticketId}/close`, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ email: userEmail })
-        });
-
-        await loadTicket();
-        alert('Тикет закрыт');
-    });
-
-    function getCookie(name) {
-        const match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
-        return match ? decodeURIComponent(match[2]) : null;
-    }
-
-    loadTicket();
-</script>
+<script src="script.js"></script>
 </body>
 </html>
