--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Knowledge Base</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="top-bar">
-    <div id="user-info">
-        <div id="g_id_signin"></div>
-        <span id="user-name"></span>
+<header class="header">
+    <div class="container header-content">
+        <h1>Help Centre</h1>
+        <div id="user-info">
+            <div id="g_id_signin"></div>
+            <span id="user-name"></span>
+            <button id="create-ticket-btn">Create Support Request</button>
+            <a id="support-panel-btn" href="support-panel.html" class="hidden">Support Panel</a>
+        </div>
     </div>
-    <div class="button-group">
-        <button id="create-ticket-btn">Создать тикет</button>
-        <a id="support-panel-btn" href="support-panel.html" class="hidden">Support Panel</a>
-    </div>
-</div>
+</header>
 
-<div class="container">
+<main class="container">
     <input type="text" id="searchInput" placeholder="Search articles..." />
     <div id="searchResults" class="search-results"></div>
     <div id="content" class="grid"></div>
-</div>
+</main>
+
+<footer class="footer">
+    <div class="container footer-content">
+        <p>&copy; 2025 Tech. Support Site. No Rights Reserved.</p>
+    </div>
+</footer>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="script.js"></script>
