--- a/public/create-ticket.html
+++ b/public/create-ticket.html
@@ -1,50 +1,153 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Создание тикета</title>
+    <title>Create Support Ticket</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+        }
+
+        .form-container {
+            background-color: #ffffff;
+            border-radius: 12px;
+            padding: 30px;
+            box-shadow: 0 6px 12px rgba(0,0,0,0.08);
+            max-width: 800px;
+            margin: 30px auto;
+            animation: fadeIn 0.4s ease;
+        }
+
+        .form-container h2 {
+            text-align: center;
+            margin-bottom: 25px;
+            color: #343a40;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .form-group label {
+            margin-bottom: 8px;
+            font-weight: 600;
+            color: #495057;
+        }
+
+        .form-group input,
+        .form-group textarea,
+        .form-group select {
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid #ced4da;
+            transition: border-color 0.3s;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus,
+        .form-group select:focus {
+            border-color: #007bff;
+            outline: none;
+        }
+
+        button[type="submit"] {
+            width: 100%;
+            padding: 12px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: opacity 0.3s;
+        }
+
+        button[type="submit"]:hover {
+            opacity: 0.9;
+        }
+
+        #success-message {
+            display: none;
+            text-align: center;
+            padding: 15px;
+            border-radius: 8px;
+            background-color: #d4edda;
+            color: #155724;
+            margin-top: 20px;
+        }
+
+        .rules-note {
+            margin-top: 25px;
+            font-size: 0.9rem;
+            color: #6c757d;
+            background: #fff3cd;
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid #ffeeba;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <h1>Создать тикет</h1>
+
+<header></header>
+
+<main class="form-container">
+    <h2>Create a Support Ticket</h2>
     <form id="ticket-form">
-        <div>
-            <label for="category">Категория:</label>
+        <div class="form-group">
+            <label for="category">Category:</label>
             <select id="category" name="category_id" required></select>
         </div>
 
-        <div>
-            <label for="title">Заголовок:</label>
+        <div class="form-group">
+            <label for="title">Title:</label>
             <input type="text" id="title" name="title" required />
         </div>
 
-        <div>
-            <label for="description">Описание:</label>
-            <textarea id="description" name="description"></textarea>
+        <div class="form-group">
+            <label for="description">Description:</label>
+            <textarea id="description" name="description" rows="4"></textarea>
         </div>
 
         <div id="dynamic-fields"></div>
 
-        <button type="submit">Отправить тикет</button>
-    </form>
+        <button type="submit"><i class="fas fa-paper-plane"></i> Submit Ticket</button>
 
-    <div id="success-message" style="display: none; margin-top: 20px;">
-        ✅ Тикет успешно создан! Проверьте вашу почту.
-    </div>
-</div>
+        <div class="rules-note">
+            ⚠️ <strong>Support Rules:</strong> Please be respectful and clear in your communication. Abuse or spam will result in account suspension.
+        </div>
+
+        <div id="success-message">✅ Ticket successfully created! Check your email.</div>
+    </form>
+</main>
+
+<footer></footer>
+
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+<script src="loadHeaderFooter.js"></script>
+
 
 <script>
     const userEmail = getCookie('user_email');
     if (!userEmail) {
-        alert("Вы должны авторизоваться, чтобы создать тикет.");
+        alert("Please log in to create a ticket.");
         window.location.href = "/";
     }
 
     async function loadCategories() {
         const res = await fetch('/api/ticket-categories');
         const categories = await res.json();
-
         const select = document.getElementById('category');
         categories.forEach(cat => {
             const option = document.createElement('option');
@@ -52,23 +155,21 @@
             option.textContent = cat.name;
             select.appendChild(option);
         });
-
         loadFields(select.value);
     }
 
     async function loadFields(categoryId) {
         const res = await fetch(`/api/ticket-fields?category_id=${categoryId}`);
         const fields = await res.json();
-
         const container = document.getElementById('dynamic-fields');
         container.innerHTML = '';
-
         fields.forEach(field => {
             const wrapper = document.createElement('div');
+            wrapper.className = 'form-group';
             wrapper.innerHTML = `
-          <label>${field.field_label || field.field_name}:</label>
-          ${renderField(field)}
-        `;
+                <label>${field.field_label || field.field_name}:</label>
+                ${renderField(field)}
+            `;
             container.appendChild(wrapper);
         });
     }
@@ -85,16 +186,8 @@
                 return `<textarea name="${name}" ${required}></textarea>`;
             case 'select':
                 return `<select name="${name}" ${required}>
-            ${(JSON.parse(field.options || '[]')).map(opt => `<option value="${opt}">${opt}</option>`).join('')}
-          </select>`;
-            case 'radio':
-                return (JSON.parse(field.options || '[]')).map(opt =>
-                    `<label><input type="radio" name="${name}" value="${opt}" ${required}/> ${opt}</label>`
-                ).join('<br>');
-            case 'checkbox':
-                return (JSON.parse(field.options || '[]')).map(opt =>
-                    `<label><input type="checkbox" name="${name}" value="${opt}"/> ${opt}</label>`
-                ).join('<br>');
+                    ${(JSON.parse(field.options || '[]')).map(opt => `<option>${opt}</option>`).join('')}
+                </select>`;
             default:
                 return '';
         }
@@ -105,55 +198,31 @@
         return match ? decodeURIComponent(match[2]) : null;
     }
 
-    document.getElementById('category').addEventListener('change', (e) => {
-        loadFields(e.target.value);
-    });
+    document.getElementById('category').addEventListener('change', (e) => loadFields(e.target.value));
 
     document.getElementById('ticket-form').addEventListener('submit', async (e) => {
         e.preventDefault();
 
-        const form = e.target;
-        const category_id = form.category_id.value;
-        const title = form.title.value;
-        const description = form.description.value;
-        const email = getCookie('user_email');
+        const formData = new FormData(document.getElementById('ticket-form'));
+        formData.append('email', userEmail);
 
-        const dynamicInputs = Array.from(form.elements).filter(el => el.name.startsWith('field_'));
-        const fields = [];
-
-        dynamicInputs.forEach(input => {
-            const id = parseInt(input.name.replace('field_', ''));
-            let value = '';
-
-            if (input.type === 'checkbox') {
-                const checkboxes = form.querySelectorAll(`input[name="${input.name}"]:checked`);
-                value = Array.from(checkboxes).map(cb => cb.value).join(', ');
-            } else if (input.type === 'radio') {
-                const radio = form.querySelector(`input[name="${input.name}"]:checked`);
-                value = radio ? radio.value : '';
-            } else {
-                value = input.value;
-            }
-
-            fields.push({ id, value });
-        });
-
-        const res = await fetch('/api/tickets/create', {
+        const res = await fetch('/api/tickets', {
             method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ email, title, category_id, description, fields })
+            body: formData
         });
 
         const result = await res.json();
+
         if (result.success) {
-            form.style.display = 'none';
             document.getElementById('success-message').style.display = 'block';
+            document.getElementById('ticket-form').reset();
         } else {
-            alert('Ошибка при создании тикета');
+            alert('Ошибка создания тикета: ' + result.message);
         }
     });
 
     loadCategories();
 </script>
+
 </body>
 </html>
