--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="header">
-    <div class="container header-content">
-        <h1>Help Centre</h1>
-        <div id="user-info">
-            <div id="g_id_signin"></div>
-            <span id="user-name"></span>
-            <button id="create-ticket-btn">Create Support Request</button>
-            <a id="support-panel-btn" href="support-panel.html" class="hidden">Support Panel</a>
-        </div>
-    </div>
-</header>
+<header class="header"></header>
 
 <main class="container">
     <input type="text" id="searchInput" placeholder="Search articles..." />
@@ -25,13 +15,10 @@
     <div id="content" class="grid"></div>
 </main>
 
-<footer class="footer">
-    <div class="container footer-content">
-        <p>&copy; 2025 Tech. Support Site. No Rights Reserved.</p>
-    </div>
-</footer>
+<footer class="footer"></footer>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="loadHeaderFooter.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
