--- a/public/my-tickets.html
+++ b/public/my-tickets.html
@@ -3,22 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <title>My Tickets</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-</head>
-<body class="p-4">
-<h2>📋 My Tickets</h2>
+    <style>
+        .filter-section {
+            margin-bottom: 20px;
+            display: flex;
+            gap: 10px;
+            align-items: center;
+        }
 
-<div>
-    <label for="filter">Filter by status:</label>
-    <select id="filter">
-        <option value="">All</option>
-        <option value="open">Open</option>
-        <option value="in_progress">In Progress</option>
-        <option value="closed">Closed</option>
-    </select>
+        .filter-section select {
+            padding: 8px;
+            border-radius: 6px;
+            border: 1px solid #ced4da;
+        }
+
+        .tickets-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 15px;
+        }
+
+        .ticket-block {
+            background: #ffffff;
+            border-radius: 12px;
+            padding: 15px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+            transition: transform 0.3s, box-shadow 0.3s;
+            cursor: pointer;
+            position: relative;
+            animation: fadeIn 0.4s ease;
+        }
+
+        .ticket-block:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+        }
+
+        .status {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            font-size: 0.75rem;
+            padding: 4px 10px;
+            border-radius: 20px;
+            font-weight: 600;
+            color: #ffffff;
+        }
+
+        .status.open { background-color: #28a745; }
+        .status.in_progress { background-color: #ffc107; color: #212529; }
+        .status.closed { background-color: #dc3545; }
+
+        .ticket-title {
+            font-weight: 600;
+            margin-bottom: 8px;
+            font-size: 1.1em;
+            color: #343a40;
+        }
+
+        .ticket-info {
+            font-size: 0.9rem;
+            color: #555;
+            margin-bottom: 8px;
+        }
+
+        .ticket-update {
+            font-size: 0.85rem;
+            color: #6c757d;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
+</head>
+<body>
+
+<header class="header"></header>
+
+<div class="container">
+    <h2><i class="fas fa-ticket-alt"></i> My Support Tickets</h2>
+
+    <div class="filter-section">
+        <label for="filter">Status:</label>
+        <select id="filter">
+            <option value="">All</option>
+            <option value="open">Open</option>
+            <option value="in_progress">In Progress</option>
+            <option value="closed">Closed</option>
+        </select>
+    </div>
+
+    <div id="tickets" class="tickets-grid"></div>
 </div>
 
-<div id="tickets" class="mt-3"></div>
+<footer class="footer"></footer>
 
 <script>
     const userEmail = document.cookie.split('; ').find(c => c.startsWith('user_email')).split('=')[1];
@@ -31,18 +113,27 @@
         const container = document.getElementById('tickets');
         container.innerHTML = '';
 
-        tickets.forEach(t => {
-            const div = document.createElement('div');
-            div.className = 'ticket-block';
-            div.innerHTML = `
-          <h4>${t.title}</h4>
-          <p>${(t.last_message || '').slice(0, 100)}</p>
-          <p><small>Created: ${new Date(t.creation_date).toLocaleString()}</small></p>
-          <p><small>Last message: ${t.last_message_date ? new Date(t.last_message_date).toLocaleString() : '—'}</small></p>
-          <p><strong>Status: ${t.status}</strong></p>
-        `;
-            div.onclick = () => window.location.href = `ticket.html?id=${t.id}`;
-            container.appendChild(div);
+        tickets.forEach(ticket => {
+            const statusClass = ticket.status.toLowerCase().replace(' ', '_');
+
+            const ticketEl = document.createElement('div');
+            ticketEl.className = 'ticket-block';
+            ticketEl.innerHTML = `
+                <span class="status ${statusClass}">${ticket.status}</span>
+                <div class="ticket-title">${ticket.title}</div>
+                <div class="ticket-info">
+                    Created: ${new Date(ticket.creation_date).toLocaleDateString()}
+                </div>
+                <div class="ticket-update">
+                    Last update: ${ticket.last_message_date ? new Date(ticket.last_message_date).toLocaleDateString() : '—'}
+                </div>
+                <div class="ticket-info">
+                    ${ticket.last_message ? ticket.last_message.slice(0, 80) + '...' : 'No messages yet'}
+                </div>
+            `;
+
+            ticketEl.onclick = () => window.location.href = `ticket.html?id=${ticket.id}`;
+            container.appendChild(ticketEl);
         });
     }
 
@@ -50,5 +141,8 @@
 
     loadTickets();
 </script>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="loadHeaderFooter.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
