--- a/public/support-panel.html
+++ b/public/support-panel.html
@@ -151,17 +151,7 @@
 </head>
 <body>
 
-<header class="header">
-    <div class="container header-content">
-        <h1 onclick="location.href='http://localhost:3000'" style="cursor:pointer;">Help Centre</h1>
-        <div id="user-info">
-            <div id="g_id_signin"></div>
-            <span id="user-name"></span>
-            <button id="create-ticket-btn">Create Support Request</button>
-            <a id="support-panel-btn" href="support-panel.html">Support Panel</a>
-        </div>
-    </div>
-</header>
+<header class="header"></header>
 
 <main class="container">
     <h2>🛠️ Support Panel</h2>
@@ -182,13 +172,10 @@
     <div id="ticket-container" class="tickets-grid">Loading tickets...</div>
 </main>
 
-<footer class="footer">
-    <div class="container footer-content">
-        <p>&copy; 2025 Tech. Support Site. No Rights Reserved.</p>
-    </div>
-</footer>
+<footer class="footer"></footer>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="loadHeaderFooter.js"></script>
 <script src="script.js"></script>
 <script src="support-panel.js"></script>
 <script>
@@ -225,6 +212,5 @@
         });
     }
 </script>
-
 </body>
 </html>
