--- a/public/article.html
+++ b/public/article.html
@@ -69,6 +69,7 @@
 </footer>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="loadHeaderFooter.js"></script>
 <script src="script.js"></script>
 <script>
     const params = new URLSearchParams(location.search);
