--- a/public/ticket.html
+++ b/public/ticket.html
@@ -139,12 +139,12 @@
         <div class="ticket-info">
             <h2 id="ticket-title"></h2>
             <p><strong>Status:</strong> <span id="ticket-status" class="status"></span></p>
-            <p id="ticket-description"></p>
         </div>
 
         <div class="ticket-fields">
             <h3><i class="fas fa-list"></i> Ticket Fields</h3>
-            <div id="ticket-fields"></div> <!-- Правильный id -->
+            <p id="ticket-description"></p>
+            <div id="ticket-fields"></div>
         </div>
 
         <div class="ticket-actions">
@@ -169,6 +169,7 @@
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="loadHeaderFooter.js"></script>
 <script src="script.js"></script>
+<script src="ticket.js"></script>
 
 </body>
 </html>
