--- a/public/my-tickets.html
+++ b/public/my-tickets.html
@@ -84,7 +84,7 @@
 
 <header class="header"></header>
 
-<div class="container">
+<main class="container">
     <h2><i class="fas fa-ticket-alt"></i> My Support Tickets</h2>
 
     <div class="filter-section">
@@ -98,7 +98,7 @@
     </div>
 
     <div id="tickets" class="tickets-grid"></div>
-</div>
+</main>
 
 <footer class="footer"></footer>
 
